Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-74903

qdoc producing invalid HTML

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.13
    • 5.12.1
    • Build tools: qdoc
    • None
    • macOS 10.14.2 with Qt 5.12.1
    • macOS
    • 7bdd7e5d9edcbe3771257797ce2d43303f43071e

      qdoc is producing invalid html right after the body tag

      <body>                                                                        

      <li>Test Guide</li>   

      where "Test Guide" ist the title string.

      I attached a minimal config file and qdoc file to reproduce the problem.

        1. test.qdoc
          0.1 kB
        2. test.qdocconf
          0.1 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            gbk Martin Smith (Qt)
            pflanzgurke Rolf Winter
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes